add_library(occ_dma
    "${CMAKE_CURRENT_SOURCE_DIR}/add_qlm.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/binomial.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/dma.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/gauss_hermite.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/linear_multipole_shifter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/linear_multipole_calculator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/multipole.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/multipole_calculator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/multipole_shifter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/shiftq.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/solid_harmonics.cpp"
)

target_link_libraries(occ_dma
    PUBLIC
    occ_core
    occ_gto
    occ_qm
    occ_dft
)
